# falling_petals

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
falling_petals/: Cargo.toml  build.rs
falling_petals/res/: config.toml
falling_petals/src/: configuration.rs  falling_petals.rs  graphics.rs  input.rs  lib.rs  main.rs  state.rs
falling_petals/src/graphics/: camera.rs  gpu_types.rs  shader.wgsl  texture.rs
game/: Cargo.toml  build.rs
game/src/: game.rs  graphics.rs  lib.rs  main.rs
game/src/game/: controller.rs
game/src/graphics/: camera.rs  gpu_types.rs  shader.wgsl  texture.rs  vertex.rs
src/: game.rs  game_state.rs  graphics.rs  lib.rs
src/graphics/: camera.rs  shader.wgsl  texture.rs  vertex.rs
